# RAGnostic

./: .env.example  .gitignore  .prettierignore  README.md  mypy.ini  package-lock.json  package.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260415_000001_init_schema.py  20260424_000002_add_profile_icon_name.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  request_context.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/middleware/: request_context.py
backend/app/models/: db.py  entities.py
backend/app/schemas/: admin.py  auth.py  chat.py  common.py  documents.py  logs.py  profiles.py
backend/scripts/: seed_admin.py
backend/tests/: test_health.py
bff/: .eslintrc.cjs  README.md  package.json  tsconfig.json
bff/src/: index.js
design-system/ragnostic/: MASTER.md
docs/: backend-task.md  frontend-task.md  frontend-ui-only-spec.md  project.md  system-design.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/client/: App.tsx  global.css  providers.tsx
frontend/lib/: env.ts  query-client.ts  token-store.ts  types.ts  utils.ts
frontend/server/: index.ts  node-build.ts
infra/: README.md  docker-compose.yml
scripts/: deploy-fast-prod.sh  deploy-fast.sh  dev-local.sh
worker/: README.md  pyproject.toml
worker/worker_app/: main.py  pipeline.py
(+87 files in other folders)
