[project]
name = "ragnostic-worker"
version = "0.1.0"
description = "RAGnostic ingest worker"
requires-python = "==3.12.*"
dependencies = [
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-json-logger>=2.0.7,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.11.1,<2.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["worker_app"]
